--- a/data/PACS/AddDataLabels-Copy1.ipynb
+++ b/data/PACS/AddDataLabels-Copy1.ipynb
@@ -43,13 +43,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "f = open('labelFile.json')\n",
+    "data = json.load(f)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "import pandas as pd\n",
     "f = open('labelFile.json')\n",
     "data = json.load(f)\n",
+    "\n",
+    "\n",
+    "columns = ['Level of details','Edges','Color saturation',\n",
+    "           'Color shades','Background','Single instance',\n",
+    "           'Text','Texture','Perspective']\n",
+    "info = pd.DataFrame(data, columns=columns)\n",
     "\n"
    ]
   },
@@ -100,76 +120,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "array(['low-level, delineated details', 'low-level, grainy details',\n       'mid-level, delineated details', 'low-level. delineated details',\n       'low level details', 'low-level, delineated, grainy details',\n       'mid-level, delineated, detailed',\n       'mid-level, delineated, representational details',\n       'low-level,grainy details', 'mid level details',\n       'mid-level, detailed, representational',\n       'mid-level, detailed, delineated',\n       'mid-level, representational, delineated details',\n       'mid-level, grainy, representational, delineated details',\n       'high-level, delineated, detailed, representational',\n       'low-level, grainy, representational details',\n       'low-level, grainy, delineated details'], dtype=object)"
+      "text/plain": "array(['low level details', 'low-level details'], dtype=object)"
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cartoonDf[\"Level of details\"].unique()\n"
+    "sketchDf[\"Level of details\"].unique()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "array(['skin shades dominance', 'brown shades', 'colorful',\n       'black dominance, skin shades', 'gray scale, pink tips',\n       'yellow dominance', 'bland colors', 'grayscale',\n       'yellow and brown shades', 'gray scale', 'colorful, skin shades',\n       'yellow and orange shades', 'brown and red shades',\n       'brown and orange shades', 'blue shades', 'dark brown shades',\n       'brown shades with black elements', 'brown and creamy shades',\n       'gray and blue shades, red element', 'orange and white shades',\n       'dark gray scale', 'creamy shades, black element',\n       'green and white shades', 'brown and gray shades',\n       'brown shades, black elements', 'blue and brown shades', 'purple',\n       'brown and white shades', 'bland colors, skin shades',\n       'mixed colors', 'purple and red', 'brown and sandy shades',\n       'purple dominance', 'brown dominance', 'dark gray',\n       'black and white', 'pink shades', 'brown color',\n       'white with blue tips', 'gray scale with purple element',\n       'yellow dominance, brown tips', 'white dominance, yellow element'],\n      dtype=object)"
+      "text/plain": "array(['monochrome white', 'plain, white'], dtype=object)"
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy\n",
-    "cartoonDf[\"Color shades\"].unique()\n",
+    "sketchDf[\"Background\"].unique()\n",
     "\n",
     "# numpy.concatenate( hi,axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "array(['cartoon', 'without texture', 'orange patches', 'gray squares'],\n      dtype=object)"
+      "text/plain": "array(['without texture'], dtype=object)"
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cartoonDf[\"Texture\"].unique()"
+    "sketchDf[\"Texture\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
-      "text/plain": "array(['unrealistic', 'without perspective', 'realistic',\n       'with perspective'], dtype=object)"
+      "text/plain": "array(['with perspective, realistic', 'realistic', 'without perspective',\n       'compressed', 'with perspective'], dtype=object)"
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cartoonDf[\"Perspective\"].unique()"
+    "photoDf[\"Perspective\"].unique()"
    ],
    "metadata": {
     "collapsed": false
